--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ plugins:
 nav:
   - Backstage:
     - Getting Started: getting-started.md
+    - Dockerization: dockerisation.md
     - Docker: docker.md
   - Plugins: 
     - SonarQube: sonarqube.md
