added documentation about creating a plugin; refactor plugin-first-backend router

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,10 +6,12 @@ plugins:
 
 nav:
   - Backstage:
+    - Definitions: backstage-definition.md
     - Getting Started: getting-started.md
     - Docker: docker.md
     - Dockerization: dockerisation.md
     - DataBase: database.md
   - Plugins: 
+    - Creating Plugins: plugins/creating-a-plugin.md
     - SonarQube: plugins/sonarqube
     - Search: plugins/search.md
