added documentation for integrating search into plugin

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,5 +13,6 @@ nav:
     - DataBase: database.md
   - Plugins: 
     - Creating Plugins: plugins/creating-a-plugin.md
+    - Adding Search functionality: plugins/add-search-to-plugin.md
     - SonarQube: plugins/sonarqube
     - Search: plugins/search.md
