--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -37,6 +37,8 @@
     "@internal/plugin-secondary": "^0.1.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
+    "@roadiehq/backstage-plugin-github-insights": "^2.1.0",
+    "@roadiehq/backstage-plugin-github-pull-requests": "^2.3.0",
     "history": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
